--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,49 @@
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows shortcuts
+*.lnk
+
+# Mac
+.DS_Store
+
+# Maven
+target/
+build/
+
+# Nodejs
+node_modules/
+package-lock.json
+dist/
+
+# test
+reports/
+.scannerwork
+
+# JetBrains
+.idea/
+*.iml
+
+# Eclipse
+.settings/
+.metadata/
+
+# Temp
+*.pid
+*.log
+*.tmp
+
 #amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/mock-data
 amplify/backend/amplify-meta.json
 amplify/backend/awscloudformation
 build/
@@ -8,3 +51,6 @@ dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
+amplifyconfiguration.json
+amplify-gradle-config.json
+amplifyxc.config
