--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,1 +1,20 @@
-{}
+{
+  "api": {
+    "board": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "additionalAuthenticationProviders": [],
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "description": "sample-key",
+              "apiKeyExpirationDays": 7
+            }
+          }
+        }
+      }
+    }
+  }
+}
