--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,22 +1,5 @@
 {
-	"api": {
-		"Leaderboard": {
-			"service": "AppSync",
-			"providerPlugin": "awscloudformation",
-			"output": {
-				"authConfig": {
-					"additionalAuthenticationProviders": [],
-					"defaultAuthentication": {
-						"authenticationType": "API_KEY",
-						"apiKeyConfig": {
-							"description": "",
-							"apiKeyExpirationDays": 7
-						}
-					}
-				}
-			}
-		}
-	},
+	"api": {},
 	"hosting": {},
 	"auth": {}
 }
