--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
     "name": "sample-amplify",
-    "version": "1.0.0",
+    "version": "v0.1.0",
     "description": "Amplify JavaScript Example",
     "dependencies": {
         "@aws-amplify/api": "latest",
-        "@aws-amplify/pubsub": "latest"
+        "@aws-amplify/pubsub": "latest",
+        "css-loader": "^3.4.2",
+        "file-loader": "^5.0.2",
+        "style-loader": "^1.1.3",
+        "url-loader": "^3.0.0"
     },
     "devDependencies": {
+        "copy-webpack-plugin": "^4.5.2",
+        "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.9.0",
         "webpack": "^4.17.1",
         "webpack-cli": "^3.1.0",
-        "copy-webpack-plugin": "^4.5.2",
         "webpack-dev-server": "^3.1.5"
     },
     "scripts": {
         "start": "webpack && webpack-dev-server --mode development",
-        "build": "webpack"
+        "clean": "rm -rf dist node_modules",
+        "build": "npm install -s && webpack"
     }
 }
