--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Nodejs
+node_modules/
+package-lock.json
+yarn.lock
+
 #amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
