--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,12 +7,7 @@
 			"customAuth": false
 		}
 	},
-	"hosting": {
-		"S3AndCloudFront": {
-			"service": "S3AndCloudFront",
-			"providerPlugin": "awscloudformation"
-		}
-	},
+	"hosting": {},
 	"analytics": {
 		"sampleamplify": {
 			"service": "Pinpoint",
