--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "http://nalbam.github.io/sample-amplify"
+  "homepage": "http://nalbam.github.io/sample-amplify",
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }
 }
